--- a/styles/SeachBar.module.css
+++ b/styles/SeachBar.module.css
@@ -1,5 +1,5 @@
 .search {
-    padding-bottom: 20px;
+    padding-bottom: 50px;
 }
 
 .search_bar {
